--- a/WelCareForYou-IT1/Views/Shared/_Layout.cshtml
+++ b/WelCareForYou-IT1/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
 				<ul class="navbar-nav nav ml-auto">
 					<li class="nav-item"><a href="~/Home/index" class="nav-link"><span>Home</span></a></li>
 					<li class="nav-item"><a href="~/Home/index" class="nav-link"><span>Contact Us</span></a></li>
-					<li class="nav-item"><a href="~/Home/Housing" class="nav-link"><span>Help with your Renting</span></a></li>
+					<li class="nav-item"><a href="~/Questionnaire/Index" class="nav-link"><span>Help with your Renting</span></a></li>
 				</ul>
 			</div>
 		</div>
