--- a/WelCareForYou-IT1/Views/Questionnaire/Index.cshtml
+++ b/WelCareForYou-IT1/Views/Questionnaire/Index.cshtml
@@ -63,14 +63,14 @@
 
 				<div class="form-group">
 					<div class="col-md-10">
-						<div class="input-group-prepend">
-							<span class="input-group-text bg-white">
-								<i class="fa fa-paw"></i>
-							</span>
+                        <div class="input-group-prepend">
+                            <span class="input-group-text bg-white">
+                                <i class="fa fa-paw"></i>
+                            </span>
 
-							@Html.EditorFor(model => model.AgeGroup, new { htmlAttributes = new { @class = "form-control", placeholder = "Please enter your age" } })
-							@Html.ValidationMessageFor(model => model.AgeGroup, "", new { @class = "text-danger" })
-						</div>
+                            @Html.DropDownList("AgeGroup", ViewData["AgeGroup"] as SelectList, htmlAttributes: new { @class = "form-control" })
+                            @Html.ValidationMessageFor(model => model.AgeGroup, "", new { @class = "text-danger" })
+                        </div>
 						</div>
 					</div>
 
@@ -78,13 +78,13 @@
 				<div class="form-group">
 
 					<div class="col-md-10">
-						<div class="input-group-prepend">
-							<span class="input-group-text bg-white">
-								<i class="fa fa-user-circle"></i>
-							</span>
-							@Html.EditorFor(model => model.Gender, new { htmlAttributes = new { @class = "form-control", placeholder = "Please enter your gender" } })
-							@Html.ValidationMessageFor(model => model.Gender, "", new { @class = "text-danger" })
-						</div>
+                        <div class="input-group-prepend">
+                            <span class="input-group-text bg-white">
+                                <i class="fa fa-user-circle"></i>
+                            </span>
+                            @Html.DropDownList("Gender", ViewData["Gender"] as SelectList, htmlAttributes: new { @class = "form-control" })
+                            @Html.ValidationMessageFor(model => model.Gender, "", new { @class = "text-danger" })
+                        </div>
 					</div>
 				</div>
 
@@ -92,26 +92,30 @@
 				<div class="form-group">
 
 					<div class="col-md-10">
-						<div class="input-group-prepend">
-							<span class="input-group-text bg-white">
-								<i class="fa fa-home"></i>
-							</span>
-							@Html.EditorFor(model => model.NumOfRoom, new { htmlAttributes = new { @class = "form-control", placeholder = "Please enter number of rooms you need" } })
-							@Html.ValidationMessageFor(model => model.NumOfRoom, "", new { @class = "text-danger" })
-						</div>
+                        <div>
+                            <div class="input-group-prepend">
+                                <span class="input-group-text bg-white">
+                                    <i class="fa fa-home"></i>
+                                </span>
+
+                                @Html.DropDownList("NumOfRoom", ViewData["NumOfRoom"] as SelectList, htmlAttributes: new { @class = "form-control", placeholder = "Please enter number of rooms you need"})
+                                @Html.ValidationMessageFor(model => model.NumOfRoom, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
 					</div>
 				</div>
 
 				<div class="form-group">
 					
 					<div class="col-md-10">
-						<div class="input-group-prepend">
-							<span class="input-group-text bg-white">
-								<i class="fa fa-map-marker"></i>
-							</span>
-							@Html.EditorFor(model => model.SuburbSuburbName, new { htmlAttributes = new { @class = "form-control", placeholder = "Please enter your current living suburb" } })
-							@Html.ValidationMessageFor(model => model.SuburbSuburbName, "", new { @class = "text-danger" })
-						</div>
+                        <div class="input-group-prepend">
+                            <span class="input-group-text bg-white">
+                                <i class="fa fa-map-marker"></i>
+                            </span>
+                            @Html.DropDownList("SuburbSuburbName", ViewData["SuburbName"] as SelectList, htmlAttributes: new { @class = "form-control" })
+                            
+                            @Html.ValidationMessageFor(model => model.SuburbSuburbName, "", new { @class = "text-danger" })
+                        </div>
 					</div>
 					</div>
 
