--- a/WelCareForYou-IT1/Views/Home/Undeveloped.cshtml
+++ b/WelCareForYou-IT1/Views/Home/Undeveloped.cshtml
@@ -1,10 +1,14 @@
-﻿<!DOCTYPE html>
-<html lang="en">
+﻿@{
+	Layout = null;
+}
+
+<!DOCTYPE html>
+
+<html>
 <head>
-	<title>Error Message</title>
+
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
 
 	<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,600,700,800,900" rel="stylesheet">
 
@@ -25,35 +29,21 @@
 	<link rel="stylesheet" href="~/Content/css/flaticon.css">
 	<link rel="stylesheet" href="~/Content/css/icomoon.css">
 	<link rel="stylesheet" href="~/Content/css/style.css">
-
-
-	<link rel="stylesheet" href="~/Content/css/StyleSheet1.css">
+	<title></title>
 </head>
-<body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
+<body>
 
-	<section class="ftco-section" >
+	<section class="ftco-section" id="blog-section">
 		<div class="container">
 			<div class="row justify-content-center mb-5 pb-5">
 				<div class="col-md-10 heading-section text-center ftco-animate">
 					<span class="subheading">SORRY</span>
-					<h2 class="mb-4">
-						Sorry, based on your result we haven't find any rent better than your current rent.
-						Would you like to submit the form again?
-					</h2>
+					<h2 class="mb-4">This section still under Development..</h2>
 					<p>Developers will finish this section as soon as possible. See you soon!</p>
-					<p><a href="~/Questionnaire/Index" class="btn btn-primary  py-3 px-4">Submit the form again? </a></p>
 				</div>
 			</div>
 		</div>
 	</section>
-
-	
-
-
-
-
-
-
 
 	<script src="~/Content/js/jquery.min.js"></script>
 	<script src="~/Content/js/jquery-migrate-3.0.1.min.js"></script>
@@ -71,9 +61,6 @@
 	<script src="~/Content/js/scrollax.min.js"></script>
 
 
-	<script src="~/Content/js/scroll-down.js"></script>
-
 	<script src="~/Content/js/main.js"></script>
-
 </body>
 </html>
