--- a/WelCareForYou-IT1/Views/Home/Index.cshtml
+++ b/WelCareForYou-IT1/Views/Home/Index.cshtml
@@ -4,274 +4,196 @@
 }
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<title>WelCareForYou -- Helping the homeless</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,600,700,800,900" rel="stylesheet">
+<body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 
-	<link rel="stylesheet" href="~/Content/css/open-iconic-bootstrap.min.css">
-	<link rel="stylesheet" href="~/Content/css/animate.css">
 
-	<link rel="stylesheet" href="~/Content/css/owl.carousel.min.css">
-	<link rel="stylesheet" href="~/Content/css/owl.theme.default.min.css">
-	<link rel="stylesheet" href="~/Content/css/magnific-popup.css">
 
-	<link rel="stylesheet" href="~/Content/css/aos.css">
+	<section class="hero-wrap js-fullheight" style="background-image: url('../Content/images/family.png');">
+		<div class="overlay"></div>
+		<div class="container">
+			<div class="row no-gutters slider-text js-fullheight align-items-center justify-content-end" data-scrollax-parent="true">
+				<div class="col-md-6 ftco-animate" data-scrollax=" properties: { translateY: '30%' }">
+					<h1 class="mb-4" data-scrollax="properties: { translateY: '10%', opacity: 1.6 }">Avoid the Risk of Homelessness from Today</h1>
+					<p class="mb-4" data-scrollax="properties: { translateY: '10%', opacity: 1.6 }"> Head over to our questionnaire and answer a few questions that will help us provide you with better renting options tailor-made to help you. </p>
 
-	<link rel="stylesheet" href="~/Content/css/ionicons.min.css">
-
-	<link rel="stylesheet" href="~/Content/css/bootstrap-datepicker.css">
-	<link rel="stylesheet" href="~/Content/css/jquery.timepicker.css">
-
-	<link rel="stylesheet" href="~/Content/css/flaticon.css">
-	<link rel="stylesheet" href="~/Content/css/icomoon.css">
-	<link rel="stylesheet" href="~/Content/css/style.css">
-</head>
-<body data-spy="scroll" data-target=".site-navbar-target" data-offset="200">
-		
-
-		<section class="hero-wrap js-fullheight" style="background-image: url('../Content/images/homepage.jpg');" data-section="home">
-			<div class="overlay"></div>
-			<div class="container">
-				<div class="row no-gutters slider-text js-fullheight align-items-center justify-content-end" data-scrollax-parent="true">
-					<div class="col-md-6 ftco-animate" data-scrollax=" properties: { translateY: '30%' }">
-						<h1 class="mb-4" data-scrollax="properties: { translateY: '10%', opacity: 1.6 }">Avoid the Risk of Homeless from Today</h1>
-						<p class="mb-4" data-scrollax="properties: { translateY: '10%', opacity: 1.6 }">On census night in 2011 , 7777 families faced the risk of being homeless so lets try and take the fight to homelessness. Get cheaper housing option, Claim your Superannuation </p>
-						<div class="col-md-3 d-flex justify-content-center counter-wrap ftco-animate">
-
-						</div>
-                    </div>
+					<div class="col-md-3 d-flex justify-content-center counter-wrap ftco-animate">
+						<a href="#section1">
+							<span></span> <img alt="Arrow Down Icon" src="https://www.solodev.com/assets/anchor/arrow-down.png">
+							<p> Scroll</p>
+						</a>
 					</div>
+				</div>
 			</div>
-		</section>
+		</div>
+	</section>
+
+	<section class="ftco-about ftco-no-pt ftco-no-pb img ftco-section bg-light" id="section1">
+		<div class="container">
+			<div class="row d-flex">
+				<div class="col-md-6 col-lg-6 d-flex order-md-last">
+					<div class="img-about img d-flex align-items-stretch">
+						<div class="img d-flex align-self-stretch align-items-end" style="background-image:url('../Content/images/family2.png');">
 
 
-		<section class="ftco-about ftco-no-pt ftco-no-pb img ftco-section bg-light" style="background-image: url('../Content/images/Housing.jpg');">
-			<div class="container">
-				<div class="row d-flex">
-					<div class="col-md-6 col-lg-6 d-flex">
-						<div class="img-about img d-flex align-items-stretch">
-							<div class="img d-flex align-self-stretch align-items-end"
-								 style="background-image: url('../Content/images/Housing.jpg');">
-								<a href="~/Questionnaire/Index" class="btn btn-primary py-3 px-4">Renting options</a>
-							</div>
 						</div>
 					</div>
-					<div class="col-md-6 col-lg-6 pl-lg-5 py-5">
-						<div class="row justify-content-start pb-3">
-							<div class="col-md-12 heading-section ftco-animate pb-5">
-								<span class="subheading">Better Renting Option</span>
-								<h2 class="mb-4" style="font-size: 44px; text-transform: capitalize;">Our Solutions</h2>
-							</div>
-							<div class="col-md-12 testimony-section">
-								<div class="owl-carousel carousel-testimony">
-									<div class="item">
-										<div class="testimony-wrap">
-											<div class="text mb-5">
-												<div class="icon">
+				</div>
+				<div class="col-md-6 col-lg-6 pr-lg-5 py-3 py-lg-5">
+					<div class="row justify-content-start py-3 py-lg-5">
+						<div class="col-md-12 heading-section ftco-animate">
+							<span class="subheading">Welcome</span>
+							<h2 class="mb-4" style="font-size: 44px; text-transform: capitalize;">Did you know that it is quite easy to face the risk of homelessness ? Don't worry we are here to assist!</h2>
 
-												</div>
-												<p>Renting Desrcription</p>
-											</div>
+							<p>According to Australian Bureau of Statistics (ABS), from 2007 to 2018,
+							lower income renter households paying more than 30% of income on housing costs have increased from 35% to 43.1%. Couple family with dependent children households with a mortgage spend about 502 dollars weekly on their housing. Among them, people over the age of 55 are facing more risks of homelessness.</p>
 
-										</div>
-									</div>
-
-
-								</div>
-							</div>
+							<p><a href="~/Questionnaire/Index" class="btn btn-primary py-3 px-4">Get more affordable rent options?</a></p>
 						</div>
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
+	</section>
 
-		<section class="ftco-section ftco-no-pb ftco-services" id="practice-section">
-			<div class="container">
-				<div class="row justify-content-center pb-5">
-					<div class="col-md-10 heading-section text-center ftco-animate">
-						<span class="subheading">Practice Areas</span>
-						<h2 class="mb-4">Practice Areas</h2>
-						<p>Something could be put here</p>
+
+
+
+	@*
+	<section class="ftco-section contact-section ftco-no-pb bg-light" id="section2">
+		<div class="container">
+			<div class="row justify-content-center mb-5 pb-3">
+				<div class="col-md-10 heading-section text-center ftco-animate">
+					<span class="subheading">Contact</span>
+					<h2 class="mb-4">Contact Us</h2>
+					<p></p>
+				</div>
+			</div>
+			<div class="row d-flex contact-info mb-5">
+				<div class="col-md-6 col-lg-3 d-flex ftco-animate">
+					<div class="align-self-stretch box p-4 text-center">
+						<div class="icon d-flex align-items-center justify-content-center">
+							<span class="icon-map-signs"></span>
+						</div>
+						<h3 class="mb-4">Address</h3>
+						<p>Monash University</p>
 					</div>
 				</div>
-				<div class="row no-gutters">
-					<div class="col-md-5 col-lg-3 ftco-animate py-4 nav-link-wrap">
-
+				<div class="col-md-6 col-lg-3 d-flex ftco-animate">
+					<div class="align-self-stretch box p-4 text-center">
+						<div class="icon d-flex align-items-center justify-content-center">
+							<span class="icon-phone2"></span>
+						</div>
+						<h3 class="mb-4">Contact Number</h3>
+						<p>+ 61 0421855208</p>
 					</div>
-					<div class="col-md-7 col-lg-9 ftco-animate p-4 p-md-5 d-flex align-items-center">
-
-
+				</div>
+				<div class="col-md-6 col-lg-3 d-flex ftco-animate">
+					<div class="align-self-stretch box p-4 text-center">
+						<div class="icon d-flex align-items-center justify-content-center">
+							<span class="icon-paper-plane"></span>
+						</div>
+						<h3 class="mb-4">Email Address</h3>
+						<p><a>xjia0017@student.monash.edu</a></p>
+					</div>
+				</div>
+				<div class="col-md-6 col-lg-3 d-flex ftco-animate">
+					<div class="align-self-stretch box p-4 text-center">
+						<div class="icon d-flex align-items-center justify-content-center">
+							<span class="icon-globe"></span>
+						</div>
+						<h3 class="mb-4">Website</h3>
+						<p><a href="#"></a></p>
 					</div>
 				</div>
 			</div>
-		</section>
+			<div class="row no-gutters block-9">
 
-
-
-		<section class="ftco-section" id="blog-section">
-			<div class="container">
-				<div class="row justify-content-center mb-5 pb-5">
-					<div class="col-md-10 heading-section text-center ftco-animate">
-						<span class="subheading">Blog</span>
-						<h2 class="mb-4">Our Blog</h2>
-						<p></p>
-					</div>
-				</div>
 
 			</div>
-		</section>
+		</div>
+	</section>
+		*@
 
-		<section class="ftco-section contact-section ftco-no-pb bg-light" id="contact-section">
-			<div class="container">
-				<div class="row justify-content-center mb-5 pb-3">
-					<div class="col-md-10 heading-section text-center ftco-animate">
-						<span class="subheading">Contact</span>
-						<h2 class="mb-4">Contact Us</h2>
-						<p></p>
+	<footer class="ftco-footer ftco-section">
+		<div class="container">
+			<div class="row mb-5">
+				<div class="col-md">
+					<div class="ftco-footer-widget mb-4">
+						<h2 class="ftco-heading-2">About <span>WelCareForYou</span></h2>
+						<p> We are a motivated group of individuals who are out here to help fight the battle against homelessness and through our project WelCareForYou we aim at doing exactly that  </p>
 					</div>
 				</div>
-				<div class="row d-flex contact-info mb-5">
-					<div class="col-md-6 col-lg-3 d-flex ftco-animate">
-						<div class="align-self-stretch box p-4 text-center">
-							<div class="icon d-flex align-items-center justify-content-center">
-								<span class="icon-map-signs"></span>
-							</div>
-							<h3 class="mb-4">Address</h3>
-							<p>Monash University</p>
-						</div>
-					</div>
-					<div class="col-md-6 col-lg-3 d-flex ftco-animate">
-						<div class="align-self-stretch box p-4 text-center">
-							<div class="icon d-flex align-items-center justify-content-center">
-								<span class="icon-phone2"></span>
-							</div>
-							<h3 class="mb-4">Contact Number</h3>
-							<p><a href="tel://1234567920">+ 1235 2355 98</a></p>
-						</div>
-					</div>
-					<div class="col-md-6 col-lg-3 d-flex ftco-animate">
-						<div class="align-self-stretch box p-4 text-center">
-							<div class="icon d-flex align-items-center justify-content-center">
-								<span class="icon-paper-plane"></span>
-							</div>
-							<h3 class="mb-4">Email Address</h3>
-							<p><a>info@yoursite.com</a></p>
-						</div>
-					</div>
-					<div class="col-md-6 col-lg-3 d-flex ftco-animate">
-						<div class="align-self-stretch box p-4 text-center">
-							<div class="icon d-flex align-items-center justify-content-center">
-								<span class="icon-globe"></span>
-							</div>
-							<h3 class="mb-4">Website</h3>
-							<p><a href="#"></a></p>
-						</div>
+				<div class="col-md">
+					<div class="ftco-footer-widget mb-4 ml-md-4">
+						<h2 class="ftco-heading-2">Links</h2>
+						<ul class="list-unstyled">
+							<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Home</a></li>
+							<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>About</a></li>
+							
+							<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Contact</a></li>
+						</ul>
 					</div>
 				</div>
-				<div class="row no-gutters block-9">
-					<div class="col-md-6 order-md-last d-flex">
-						<form action="#" class="bg-primary p-5 contact-form">
-							<div class="form-group">
-								<input type="text" class="form-control" placeholder="Your Name">
-							</div>
-							<div class="form-group">
-								<input type="text" class="form-control" placeholder="Your Email">
-							</div>
-							<div class="form-group">
-								<input type="text" class="form-control" placeholder="Subject">
-							</div>
-							<div class="form-group">
-								<textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
-							</div>
-							<div class="form-group">
-								<input type="submit" value="Send Message" class="btn btn-darken py-3 px-5">
-							</div>
-						</form>
 
-					</div>
-
-
-				</div>
-			</div>
-		</section>
-
-
-		<footer class="ftco-footer ftco-section">
-			<div class="container">
-				<div class="row mb-5">
-					<div class="col-md">
-						<div class="ftco-footer-widget mb-4">
-							<h2 class="ftco-heading-2">About <span>WelCareForYou</span></h2>
-							<p> Team description </p>
-						</div>
-					</div>
-					<div class="col-md">
-						<div class="ftco-footer-widget mb-4 ml-md-4">
-							<h2 class="ftco-heading-2">Links</h2>
-							<ul class="list-unstyled">
-								<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Home</a></li>
-								<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>About</a></li>
-								\
-								<li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Contact</a></li>
+				<div class="col-md">
+					<div class="ftco-footer-widget mb-4">
+						<h2 class="ftco-heading-2">Have a Questions?</h2>
+						<div class="block-23 mb-0">
+							<ul>
+								<li><span class="icon icon-map-marker"></span><span class="text">Address Monash University</span></li>
+								<li><a href="#"><span class="icon icon-phone"></span><span class="text">Phone number 0421855208</span></a></li>
+								<li><a href="#"><span class="icon icon-envelope"></span><span class="text">Email 2498856314@qq.com</span></a></li>
 							</ul>
 						</div>
-					</div>
-
-					<div class="col-md">
-						<div class="ftco-footer-widget mb-4">
-							<h2 class="ftco-heading-2">Have a Questions?</h2>
-							<div class="block-23 mb-0">
-								<ul>
-									<li><span class="icon icon-map-marker"></span><span class="text">Address</span></li>
-									<li><a href="#"><span class="icon icon-phone"></span><span class="text">Phone number</span></a></li>
-									<li><a href="#"><span class="icon icon-envelope"></span><span class="text">Email</span></a></li>
-								</ul>
-							</div>
-							<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-4">
-								<li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-								<li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-								<li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-12 text-center">
-
-						<p>
-							<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-							Copyright &copy;
-							<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-							<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-						</p>
+						<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-4">
+							<li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
+							<li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
+							<li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+						</ul>
 					</div>
 				</div>
 			</div>
-		</footer>
+			<div class="row">
+				<div class="col-md-12 text-center">
+
+					<p>
+						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+						Copyright &copy;
+						<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+					</p>
+				</div>
+			</div>
+		</div>
+	</footer>
 
 
 
 
-		<script src="~/Content/js/jquery.min.js"></script>
-		<script src="~/Content/js/jquery-migrate-3.0.1.min.js"></script>
-		<script src="~/Content/js/popper.min.js"></script>
-		<script src="~/Content/js/bootstrap.min.js"></script>
-		<script src="~/Content/js/jquery.easing.1.3.js"></script>
-		<script src="~/Content/js/jquery.waypoints.min.js"></script>
-		<script src="~/Content/js/jquery.stellar.min.js"></script>
-		<script src="~/Content/js/owl.carousel.min.js"></script>
-		<script src="~/Content/js/jquery.magnific-popup.min.js"></script>
-		<script src="~/Content/js/aos.js"></script>
-		<script src="~/Content/js/jquery.animateNumber.min.js"></script>
-		<script src="~/Content/js/bootstrap-datepicker.js"></script>
-		<script src="~/Content/js/jquery.timepicker.min.js"></script>
-		<script src="~/Content/js/scrollax.min.js"></script>
+	<script src="~/Content/js/jquery.min.js"></script>
+	<script src="~/Content/js/jquery-migrate-3.0.1.min.js"></script>
+	<script src="~/Content/js/popper.min.js"></script>
+	<script src="~/Content/js/bootstrap.min.js"></script>
+	<script src="~/Content/js/jquery.easing.1.3.js"></script>
+	<script src="~/Content/js/jquery.waypoints.min.js"></script>
+	<script src="~/Content/js/jquery.stellar.min.js"></script>
+	<script src="~/Content/js/owl.carousel.min.js"></script>
+	<script src="~/Content/js/jquery.magnific-popup.min.js"></script>
+	<script src="~/Content/js/aos.js"></script>
+	<script src="~/Content/js/jquery.animateNumber.min.js"></script>
+	<script src="~/Content/js/bootstrap-datepicker.js"></script>
+	<script src="~/Content/js/jquery.timepicker.min.js"></script>
+	<script src="~/Content/js/scrollax.min.js"></script>
 
 
-		<script src="~/Content/js/main.js"></script>
+	<script src="~/Content/js/scroll-down.js"></script>
+
+	<script src="~/Content/js/main.js"></script>
+
+
+
+
 
 </body>
 </html>
