--- a/WelCareForYou-IT1/Views/Home/Index.cshtml
+++ b/WelCareForYou-IT1/Views/Home/Index.cshtml
@@ -42,7 +42,7 @@
 				<div class="col-md-6 col-lg-6 pr-lg-5 py-3 py-lg-5">
 					<div class="row justify-content-start py-3 py-lg-5">
 						<div class="col-md-12 heading-section ftco-animate">
-							<span class="subheading">Welcome</span>
+							<span class="subheading">Your Bright Future</span>
 							<h2 class="mb-4" style="font-size: 44px; text-transform: capitalize;">Did you know that it is quite easy to face the risk of homelessness ? Don't worry we are here to assist!</h2>
 
 							<p>According to Australian Bureau of Statistics (ABS), from 2007 to 2018,
