--- a/WelCareForYou-IT1/Views/Questionnaire/Result.cshtml
+++ b/WelCareForYou-IT1/Views/Questionnaire/Result.cshtml
@@ -36,7 +36,7 @@
 </head>
 <body>
 	
-	<<section class="hero-wrap js-fullheight" style="background-image: url('../Content/images/house.jpg');">
+<section class="hero-wrap js-fullheight" style="background-image: url('../Content/images/sunflower.jpg');">
 	<div class="overlay"></div>
 	<div class="container">
 		<div class="row no-gutters slider-text js-fullheight align-items-center justify-content-end" data-scrollax-parent="true">
