--- a/WelCareForYou-IT1/Views/Questionnaire/Index.cshtml
+++ b/WelCareForYou-IT1/Views/Questionnaire/Index.cshtml
@@ -35,118 +35,121 @@
 	</section>
 
 	<section class="js-fullheight" id="section1">
-		<div class="container">
+		<div class="container" style="margin:0 auto;">
 			@using (Html.BeginForm("Result", "Questionnaire", FormMethod.Post))
 			{
 				@Html.AntiForgeryToken()
 
 
-				<form action="https://app.99inbound.com/e/123" method="POST" target="_blank">
-					<div class="col-md-10 heading-section text-center ftco-animate">
-						<h3 class="mb-4">Please fill in the form for us to provide more affordable options for you</h3>
+			<form action="https://app.99inbound.com/e/123" method="POST" target="_blank">
+				<div class="col-md-6 heading-section text-center ftco-animate" style="margin:0 auto;">
+					<h3 class="mb-4">Please fill in the form for us to provide more affordable options for you</h3>
 
+				</div>
+				<div class="form-group">
+					<div class="col-md-6" style="margin:0 auto;">
+						<div class="input-group-prepend">
+							<span class="input-group-text bg-white">
+								<i class="fa fa-calculator"></i>
+							</span>
+
+							@Html.DropDownList("AgeGroup", ViewData["AgeGroup"] as SelectList, "Please select your age group ",
+
+						   htmlAttributes: new { @class = "form-control" })
+							@Html.ValidationMessageFor(model => model.AgeGroup, "", new { @class = "text-danger" })
+						</div>
 					</div>
-					<div class="form-group">
-						<div class="col-md-10">
+				</div>
+
+
+				<div class="form-group" >
+
+					<div class="col-md-6" style="margin:0 auto;">
+						<div class="input-group-prepend">
+							<span class="input-group-text bg-white">
+								<i class="fa fa-user-circle"></i>
+							</span>
+							@Html.DropDownList("Gender", ViewData["Gender"] as SelectList, "Please select your gender ", htmlAttributes: new { @class = "form-control" })
+							@Html.ValidationMessageFor(model => model.Gender, "", new { @class = "text-danger" })
+						</div>
+					</div>
+				</div>
+
+				<div class="form-group" >
+
+					<div class="col-md-6" style="margin:0 auto;">
+						<div class="input-group-prepend">
+							<span class="input-group-text bg-white">
+								<i class="fa fa-map-marker"></i>
+							</span>
+							@Html.DropDownList("SuburbSuburbName", ViewData["SuburbName"] as SelectList, "Please select your current living surbub ", htmlAttributes: new { @class = "form-control" })
+
+							@Html.ValidationMessageFor(model => model.SuburbSuburbName, "", new { @class = "text-danger" })
+						</div>
+						<label>Based on the suburb you choose, we will show rent in your same inner suburb</label>
+					</div>
+				</div>
+
+
+
+
+
+				<div class="form-group">
+
+					<div class="col-md-6" style="margin:0 auto;">
+						<div class="input-group-prepend">
+							<span class="input-group-text bg-white">
+								<i class="fa fa-bank"></i>
+							</span>
+							@Html.EditorFor(model => model.Salary, new { htmlAttributes = new { @class = "form-control", placeholder = "Please enter your household salary (per week)" } })
+							@Html.ValidationMessageFor(model => model.Salary, "", new { @class = "text-danger" })
+						</div>
+					</div>
+				</div>
+
+				<div class="form-group">
+					<div class="col-md-6" style="margin:0 auto;">
+						<div class="input-group-prepend">
+							<span class="input-group-text bg-white">
+								<i class="fa fa-dollar"></i>
+							</span>
+
+							<input type="text" id="rent" class="form-control" placeholder="Please enter your current rent (per week)" required="required" name="rent">
+							<p class="help-block text-danger"></p>
+						</div>
+					</div>
+				</div>
+
+				<div class="form-group">
+
+					<div class="col-md-6" style="margin:0 auto;">
+						<div>
 							<div class="input-group-prepend">
 								<span class="input-group-text bg-white">
-									<i class="fa fa-calculator"></i>
+									<i class="fa fa-home"></i>
 								</span>
 
-								@Html.DropDownList("AgeGroup", ViewData["AgeGroup"] as SelectList, "Please select your age group ",
+								@Html.DropDownList("NumOfRoom", ViewData["NumOfRoom"] as SelectList, "Please select the number of rooms you need ", htmlAttributes: new { @class = "form-control", placeholder = "Please enter number of rooms you need" })
+								@Html.ValidationMessageFor(model => model.NumOfRoom, "", new { @class = "text-danger" })
 
-							   htmlAttributes: new { @class = "form-control" })
-								@Html.ValidationMessageFor(model => model.AgeGroup, "", new { @class = "text-danger" })
 							</div>
+							<label>Room number is under 4 :) </label>
 						</div>
 					</div>
+				</div>
 
-
-					<div class="form-group">
-
-						<div class="col-md-10">
-							<div class="input-group-prepend">
-								<span class="input-group-text bg-white">
-									<i class="fa fa-user-circle"></i>
-								</span>
-								@Html.DropDownList("Gender", ViewData["Gender"] as SelectList, "Please select your gender ", htmlAttributes: new { @class = "form-control" })
-								@Html.ValidationMessageFor(model => model.Gender, "", new { @class = "text-danger" })
-							</div>
+				<div class="form-group">
+					<div class="col-md-6" style="margin:0 auto;">
+						<div class="input-group-prepend">
+							<span class="input-group-text bg-white">
+								<i class="fa fa-paper-plane"></i>
+							</span>
+							<input type="submit" value="Get more options !" class="btn btn-primary ">
 						</div>
 					</div>
-					<div class="form-group">
+				</div>
 
-						<div class="col-md-10">
-							<div class="input-group-prepend">
-								<span class="input-group-text bg-white">
-									<i class="fa fa-map-marker"></i>
-								</span>
-								@Html.DropDownList("SuburbSuburbName", ViewData["SuburbName"] as SelectList, "Please select your current living surbub ", htmlAttributes: new { @class = "form-control" })
-
-								@Html.ValidationMessageFor(model => model.SuburbSuburbName, "", new { @class = "text-danger" })
-							</div>
-							<label>Based on the suburb you choose, we will show rent in your same inner suburb</label>
-						</div>
-					</div>
-
-
-					<div class="form-group">
-
-						<div class="col-md-10">
-							<div>
-								<div class="input-group-prepend">
-									<span class="input-group-text bg-white">
-										<i class="fa fa-home"></i>
-									</span>
-
-									@Html.DropDownList("NumOfRoom", ViewData["NumOfRoom"] as SelectList, "Please select the number of rooms you need ", htmlAttributes: new { @class = "form-control", placeholder = "Please enter number of rooms you need" })
-									@Html.ValidationMessageFor(model => model.NumOfRoom, "", new { @class = "text-danger" })
-
-								</div>
-								<label>Room number is under 4 :) </label>
-							</div>
-						</div>
-					</div>
-
-
-					<div class="form-group">
-
-						<div class="col-md-10">
-							<div class="input-group-prepend">
-								<span class="input-group-text bg-white">
-									<i class="fa fa-bank"></i>
-								</span>
-								@Html.EditorFor(model => model.Salary, new { htmlAttributes = new { @class = "form-control", placeholder = "Please enter your household salary (per week)" } })
-								@Html.ValidationMessageFor(model => model.Salary, "", new { @class = "text-danger" })
-							</div>
-						</div>
-					</div>
-
-					<div class="form-group">
-						<div class="col-md-10">
-							<div class="input-group-prepend">
-								<span class="input-group-text bg-white">
-									<i class="fa fa-dollar"></i>
-								</span>
-
-								<input type="text" id="rent" class="form-control" placeholder="Please enter your current rent (per week)" required="required" name="rent">
-								<p class="help-block text-danger"></p>
-							</div>
-						</div>
-					</div>
-
-					<div class="form-group">
-						<div class="col-md-10">
-							<div class="input-group-prepend">
-								<span class="input-group-text bg-white">
-									<i class="fa fa-paper-plane"></i>
-								</span>
-								<input type="submit" value="Get more options !" class="btn btn-primary ">
-							</div>
-						</div>
-					</div>
-
-				</form>
+			</form>
 
 
 			}
